ghc-4335c07/testsuite/tests/deriving/should_fail/drvfail-functor1.hs
module ShouldFail where

-- Derive Functor without a DeriveFunctor language pragma

data List a = Nil | Cons a (List a)
    deriving Functor
